# AI-Agents-for-LCA

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
agents_for_lifecycle_inventory/: .env.example  README.md  pyproject.toml
agents_for_lifecycle_inventory/agentic_lci/agents/: lca_agent.py  self_play.py  stakeholder_agent.py
agents_for_lifecycle_inventory/agentic_lci/llm_adapters/: __init__.py  gemini_adapter.py  interface.py  openai_adapter.py
agents_for_lifecycle_inventory/agentic_lci/mcp/: function_call.py  server.py  test_agent_openai_streaming.py  test_client.py
agents_for_lifecycle_inventory/agentic_lci/retrieval/database/: electronics.py
agents_for_lifecycle_inventory/agentic_lci/retrieval/reports/: __init__.py  general_llm.py
agents_for_lifecycle_inventory/agentic_lci/retrieval/vision/: __init__.py  pcb_bounding_boxes.py  pcb_detection.py  yolo_pcb_detection.py  yolo_pcb_segmentation.py
agents_for_lifecycle_inventory/agentic_lci/retrieval/web/: electricity.py  geo.py  image.py  text.py  util.py
agents_for_lifecycle_inventory/agentic_lci/schemas/: __init__.py  delta_lca.py  electronics.py  electronics_gwp.py  living_sustainability.py
agents_for_lifecycle_inventory/data/: apple.csv
agents_for_lifecycle_inventory/notebooks/: vision_example.ipynb
agents_for_lifecycle_inventory/scripts/: run_self_play.py  setup_models.sh  setup_python.sh  setup_system.sh
docs/: index.html
docs/static/css/: index.css
estimation_using_textual_features/: README.md  __init__.py  data_loaders.py  evaluation.py  run_experiments.py  weighted_knn_estimator.py
estimation_using_textual_features/data/: ElectricityMaps.txt  asus.csv
